<?xml version="1.0"?>
<package>
  <name>icaa_uav_se3_controller</name>
  <version>1.0.0</version>
  <description>SE3 controller for multi-copters using PX4 platform</description>
  <maintainer email="nanwan2004@126.com">ICAA UAV Team</maintainer>

  <license>Apache 2.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>mavros</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>